// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pulse / Story Feed Story 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzNOP gAhlxu"
    >
      <a
        className="sc-LzNsD iVPUXh"
        onClick={[Function]}
      >
        <div
          className="sc-LzNsE ikaoUv"
        >
          <h2
            className="sc-LzNsC kVrodd"
          >
            How TikTok opened a window into China’s police state
          </h2>
          <div
            className="sc-LzNtl jHCHVd"
          >
            2019-08-28T15:58:32Z
          </div>
        </div>
        <div
          className="sc-LzNsG gbIVsz"
        >
          <img
            src="https://codastory.com/wp-content/uploads/2019/09/Still-Header-.png"
          />
        </div>
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pulse / Story Feed
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Story
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    Story
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        createdAt
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            2019-08-28T15:58:32Z
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        openGraphData
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                description
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              'Uyghurs are gaming TikTok’s algorithm to find a lo…'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                images
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      url
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://codastory.com/wp-content/uploads/2019/09/S…'
                                  </span>
                                  }
                                </span>
                              </span>
                              ]
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                title
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              'How TikTok opened a window into China’s police sta…'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              …
                            </span>
                            <span>
                              <br />
                                
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        handleOpenStory
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            onClickFunc
                          </span>
                          }
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Story
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pulse / Story Feed Story Details 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzNOP gAhlxu"
    >
      <div
        className="sc-LzNtR ciphxM"
      >
        <div
          className="sc-LzNsH btIaIV"
        >
          <img
            src="https://codastory.com/wp-content/uploads/2019/09/Still-Header-.png"
          />
        </div>
      </div>
      <div
        className="sc-LzNtS kkqDWc"
      >
        <h2
          className="sc-LzNsC kVrodd"
        >
          How TikTok opened a window into China’s police state
        </h2>
        <div
          className="sc-LzNtm clyex"
        >
          <div
            className="sc-LzNsB iTmPBU"
          >
            <a
              onClick={[Function]}
            >
              Coda Story
              <svg
                height="20"
                version="1.1"
                viewBox="0 0 40 40"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g
                    fill="#00C189"
                    transform="translate(-282, -18)"
                  >
                    <path
                      d="M308.909553,20 L312.325,27.674 L320,31.0904474 L316.923,38 L320,44.9095526 L312.325,48.326 L308.909553,56 L302,52.923 L295.090447,56 L291.673,48.325 L284,44.9095526 L287.076,38 L284,31.0904474 L291.674,27.674 L295.090447,20 L302,23.076 L308.909553,20 Z M309.187143,31 L299.428571,40.4692898 L294.812857,36.0028791 L293,37.7619962 L299.428571,44 L311,32.7715931 L309.187143,31 Z"
                    />
                  </g>
                </g>
              </svg>
            </a>
          </div>
          <div
            className="sc-LzNtl jHCHVd"
          >
            2019-08-28T15:58:32Z
          </div>
        </div>
        <div
          className="sc-LzNsF ceEvWN"
        >
          Uyghurs are gaming TikTok’s algorithm to find a loophole in Xinjiangs’s information lockdown
        </div>
        <div
          className="sc-LzNrv lkKdJF"
        >
          <label
            className="sc-LzNrw eiAPBy"
          >
            Recent Contributors
          </label>
          <div
            className="sc-LzNrU dVmJvp"
          >
            <img
              className="sc-LzNrV bIobcO"
              src="https://picsum.photos/50"
            />
            <div>
              <div
                className="sc-LzNrW jWFDGs"
              >
                violetnight13
              </div>
              <div
                className="sc-LzNrX eyysoX"
              >
                $2.5
              </div>
            </div>
          </div>
          <div
            className="sc-LzNrU dVmJvp"
          >
            <img
              className="sc-LzNrV bIobcO"
              src="https://picsum.photos/50"
            />
            <div>
              <div
                className="sc-LzNrW jWFDGs"
              >
                CaryRay
              </div>
              <div
                className="sc-LzNrX eyysoX"
              >
                $3
              </div>
            </div>
          </div>
          <div
            className="sc-LzNrU dVmJvp"
          >
            <img
              className="sc-LzNrV bIobcO"
              src="https://picsum.photos/50"
            />
            <div>
              <div
                className="sc-LzNrW jWFDGs"
              >
                ronburgundy
              </div>
              <div
                className="sc-LzNrX eyysoX"
              >
                $5
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-LzNrY cKGLbK"
        >
          <span
            className="sc-LzNrZ ckxHXs"
          >
            <img
              src="https://picsum.photos/50"
            />
            <img
              src="https://picsum.photos/50"
            />
            <img
              src="https://picsum.photos/50"
            />
          </span>
          <span
            className="sc-LzNsa hxCDaJ"
          >
            30
             Boosters
          </span>
        </div>
      </div>
      <div
        className="sc-LzNtT hLqenE"
      >
        <a
          className="sc-LzNtn enUJRk"
          href="https://codastory.com/authoritarian-tech/tiktok-uyghur-china/"
          target="_blank"
        >
          Read More
        </a>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pulse / Story Feed
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Story Details
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StoryDetails
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        activeChallenge
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            false
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        createdAt
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            2019-08-28T15:58:32Z
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        newsroom
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                contractAddress
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '0x224b07d2ff8ca3c3757fdfc101922fb4792cc2d7'
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                multisigAddress
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '0xe1e345504d9cd4d19bee9c0300a8c8265e62b17c'
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                charter
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  name
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'Coda Story'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  newsroomUrl
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'https://codastory.com'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  mission
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    purpose
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Coda Story puts a team of journalists on one crisi…'
                                </span>
                                }
                              </span>
                              }
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        openGraphData
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                description
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              'Uyghurs are gaming TikTok’s algorithm to find a lo…'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                images
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              [
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      url
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://codastory.com/wp-content/uploads/2019/09/S…'
                                  </span>
                                  }
                                </span>
                              </span>
                              ]
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                title
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              'How TikTok opened a window into China’s police sta…'
                            </span>
                            ,
                            <span>
                              <span>
                                <br />
                                  
                                  
                              </span>
                              …
                            </span>
                            <span>
                              <br />
                                
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        displayedContributors
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  2.5
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'violetnight13'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  3
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'CaryRay'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  5
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'ronburgundy'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ]
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        sortedContributors
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  2.5
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'violetnight13'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  3
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'CaryRay'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    usdEquivalent
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  5
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    payerChannel
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      handle
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'ronburgundy'
                                  </span>
                                  ,
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      tiny72AvatarDataUrl
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'https://picsum.photos/50'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            ]
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        totalContributors
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            30
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        handleOpenNewsroom
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            onClickFunc
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryDetails
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pulse / Story Feed Story Newsroom Details 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzNOP gAhlxu"
    >
      <div
        className="sc-LzNtQ fDvXKB"
      >
        <div
          className="sc-LzNsJ jztEWG"
        >
          <svg
            className="sc-AykKC fCEzAm"
            height={11}
            viewBox="0 0 72 21"
            width={42}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#000000"
              fillRule="evenodd"
              transform="translate(0 .457)"
            >
              <path
                d="M.5 10c0-5.76 4.357-10 9.856-10 3.58 0 6.069 1.414 7.729 3.77L15.75 5.445c-1.297-1.728-2.905-2.67-5.499-2.67-3.838 0-6.64 3.089-6.64 7.225 0 4.24 2.853 7.225 6.744 7.225 2.49 0 4.357-.942 5.81-2.827L18.5 16.02C16.529 18.691 13.987 20 10.252 20 4.805 20 .5 15.76.5 10M22.5 20h3V1h-3zM29 1h3.382l5.782 13.228L43.782 1H47l-8.782 20h-.163zM50.5 20h3V1h-3zM59.5 1h3.175v16.344H71.5V20h-12z"
              />
            </g>
          </svg>
           Registry
        </div>
        <div
          className="sc-LzNsK eJGrDf"
        >
          Coda Story
        </div>
        <a
          className="sc-LzNti dXhgzC"
          href="https://codastory.com"
          target="_blank"
        >
          https://codastory.com
        </a>
        <span
          className="sc-LzNtq dxAibF"
        >
          Approved
        </span>
      </div>
      <div
        className="sc-LzNtS kkqDWc"
      >
        <div
          className="sc-LzNto bOSlLE"
        >
          <div
            className="sc-LzNtp PcSwv"
          >
            <p>
              This Newsroom maintains the standards and journalistic principles set by the
               
              <a
                href="https://civil.co/constitution"
                target="_blank"
              >
                Civil Constitution
              </a>
               
              and is approved by the community.
            </p>
            <svg
              height="40"
              version="1.1"
              viewBox="0 0 40 40"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="none"
                strokeWidth="1"
              >
                <g
                  fill="#00C189"
                  transform="translate(-282, -18)"
                >
                  <path
                    d="M308.909553,20 L312.325,27.674 L320,31.0904474 L316.923,38 L320,44.9095526 L312.325,48.326 L308.909553,56 L302,52.923 L295.090447,56 L291.673,48.325 L284,44.9095526 L287.076,38 L284,31.0904474 L291.674,27.674 L295.090447,20 L302,23.076 L308.909553,20 Z M309.187143,31 L299.428571,40.4692898 L294.812857,36.0028791 L293,37.7619962 L299.428571,44 L311,32.7715931 L309.187143,31 Z"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div
          className="sc-LzNtj eXwupb"
        >
          <h2>
            About
          </h2>
          Coda Story puts a team of journalists on one crisis at a time and stays with it, providing unique depth, continuity and understanding to events that shape our world.
        </div>
        <div
          className="sc-LzNtj eXwupb"
        >
          <h3>
            Smart Contract Address
          </h3>
          <span
            className="sc-LzNtk kZKwNm"
          >
            0x224b07d2ff8ca3c3757fdfc101922fb4792cc2d7
          </span>
        </div>
        <div
          className="sc-LzNtj eXwupb"
        >
          <h3>
            Public Wallet Address
          </h3>
          <span
            className="sc-LzNtk kZKwNm"
          >
            0xe1e345504d9cd4d19bee9c0300a8c8265e62b17c
          </span>
        </div>
      </div>
      <div
        className="sc-LzNtT hLqenE"
      >
        <a
          className="sc-LzNtn enUJRk"
          href="https://registry.civil.co/0x224b07d2ff8ca3c3757fdfc101922fb4792cc2d7"
          target="_blank"
        >
          See Civil Registry Profile
        </a>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pulse / Story Feed
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Story Newsroom Details
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StoryNewsroomDetails
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        activeChallenge
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            false
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        newsroom
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            {
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                contractAddress
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '0x224b07d2ff8ca3c3757fdfc101922fb4792cc2d7'
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                multisigAddress
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '0xe1e345504d9cd4d19bee9c0300a8c8265e62b17c'
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                charter
                              </span>
                            </span>
                            : 
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  name
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'Coda Story'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  newsroomUrl
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'https://codastory.com'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  mission
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    purpose
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Coda Story puts a team of journalists on one crisi…'
                                </span>
                                }
                              </span>
                              }
                            </span>
                            }
                          </span>
                          }
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StoryNewsroomDetails
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
